CSS and whitelist function
 - Added css to minimize clutter
 - Fixed an array being turned into a string
 - Added whitelisting and blocking
 - Added a display for what tag is being hidden

--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,13 @@
         <style>
             body {
                 background-color: black;
+                height: 200px;
             }
 
             button {
                 background-color: rgb(29, 155, 240);
                 border-radius: 9999px;
+                border-color: rgba(15, 15, 15, 1);
             }
 
             textarea,
